--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest"
   },
   "private": true,
   "dependencies": {
@@ -29,17 +29,22 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^12.0.0",
     "@angular-devkit/build-angular": "~12.2.18",
     "@angular/cli": "~12.2.18",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "^3.8.0",
+    "@types/jest": "^27.5.2",
     "@types/node": "^12.11.1",
     "jasmine-core": "^3.8.0",
+    "jest": "^27.5.1",
+    "jest-preset-angular": "^11.1.2",
     "karma": "^6.3.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-jasmine": "^4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "ts-jest": "^27.1.5",
     "typescript": "~4.3.5"
   }
 }
